--- a/front/index.css
+++ b/front/index.css
@@ -200,3 +200,69 @@ button {
     flex-direction: column;
     gap: 10px;
 }
+
+input {
+    padding-left: 10px;
+    height: 46px;
+    border-radius: 8px;
+    border: none;
+}
+
+#login {
+    width: 100%;
+    max-width: 1240px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 20px;
+    row-gap: 40px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+
+#login h1 {
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+#login > div {
+    grid-column: 4 / span 6;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#login form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#login form a {
+   text-align: right;
+   text-decoration: underline;
+}
+
+#login .actions{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#login span {
+    width: 1px;
+    background-color: #fff;
+    height: 100%;
+}
+
+#login .form-name{
+    display:flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+#login .form-name > input {
+    width: 48%;
+}
