--- a/front/index.css
+++ b/front/index.css
@@ -266,3 +266,46 @@ input {
 #login .form-name > input {
     width: 48%;
 }
+
+input {
+    color: #000;
+}
+
+#user-main-info{
+    margin: 0 auto;
+    width: auto;
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+#user-main-info h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#user-main-info > div {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+
+#user-info div {
+    display: flex;
+    gap: 10px;
+}
+
+#user-main-info div p:first-child {
+    font-weight: 500;
+    text-decoration: underline;
+    color: white;
+}
+
+
+
+a{
+    cursor: pointer;
+}
